--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zoey-cli-dev/core",
-  "version": "1.0.6",
+  "version": "1.0.0",
   "description": "zoey-cli-dev core",
   "author": "zoey.deng",
   "homepage": "",
@@ -17,13 +17,14 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "http://registry.npmjs.org/"
+    "registry": "http://registry.npmjs.org/",
+    "access": "public"
   },
   "scripts": {
     "test": "echo \"Run testing from Core\""
   },
   "dependencies": {
-    "@zoey-cli-dev/utils": "^1.0.6"
+    "@zoey-cli-dev/utils": "^1.0.0"
   },
-  "gitHead": "5842fa78813f4336689a3bc6ddda0559c5a113b3"
+  "gitHead": "df4aa4e46b14442e518b63284aa5e1f3087db9c6"
 }
