--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zoey-cli-dev/utils",
-  "version": "1.0.6",
+  "version": "1.0.0",
   "description": "@zoey-cli-dev utils",
   "author": "zoey.deng",
   "homepage": "",
@@ -14,10 +14,11 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "http://registry.npmjs.org/"
+    "registry": "http://registry.npmjs.org/",
+    "access": "public"
   },
   "scripts": {
     "test": "echo \"Run testing from Utils\""
   },
-  "gitHead": "5842fa78813f4336689a3bc6ddda0559c5a113b3"
+  "gitHead": "df4aa4e46b14442e518b63284aa5e1f3087db9c6"
 }
