--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,10 @@
 {
   "packages": [
-    "packages/*"
+    "packages/*",
+    "core/*",
+    "utils/*",
+    "models/*",
+    "commands/*"
   ],
   "version": "1.0.3"
 }
