--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@zoey-cli-dev/log": "file:../../utils/log",
     "@zoey-cli-dev/utils": "file:../../utils/utils",
+    "@zoey-cli-dev/utils/get-npm-info": "file:../../utils/get-npm-info",
     "colors": "^1.4.0",
     "dotenv": "^10.0.0",
     "import-local": "^3.0.2",
