检查是否为最新版本

--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -24,9 +24,11 @@
     "test": "echo \"Run testing from Core\""
   },
   "dependencies": {
+    "@zoey-cli-dev/get-npm-info": "file:../../utils/get-npm-info",
     "@zoey-cli-dev/log": "file:../../utils/log",
     "@zoey-cli-dev/utils": "file:../../utils/utils",
     "colors": "^1.4.0",
+    "commander": "^7.2.0",
     "dotenv": "^10.0.0",
     "import-local": "^3.0.2",
     "minimist": "^1.2.5",
