--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -27,6 +27,7 @@
     "@zoey-cli-dev/get-npm-info": "file:../../utils/get-npm-info",
     "@zoey-cli-dev/log": "file:../../utils/log",
     "@zoey-cli-dev/utils": "file:../../utils/utils",
+    "@zoey-cli-dev/init": "file:../../commands/init",
     "colors": "^1.4.0",
     "commander": "^7.2.0",
     "dotenv": "^10.0.0",
