--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -27,12 +27,12 @@
     "@zoey-cli-dev/log": "file:../../utils/log",
     "@zoey-cli-dev/utils": "file:../../utils/utils",
     "@zoey-cli-dev/init": "file:../../commands/init",
+    "@zoey-cli-dev/exec": "file:../exec",
     "@zoey-cli-dev/get-npm-info": "file:../../utils/get-npm-info",
     "colors": "^1.4.0",
     "commander": "^7.2.0",
     "dotenv": "^10.0.0",
     "import-local": "^3.0.2",
-    "minimist": "^1.2.5",
     "path-exists": "^4.0.0",
     "root-check": "^1.0.0",
     "semver": "^7.3.5",
