--- a/utils/utils/package.json
+++ b/utils/utils/package.json
@@ -20,5 +20,9 @@
   "scripts": {
     "test": "echo \"Run testing from Utils\""
   },
-  "gitHead": "df4aa4e46b14442e518b63284aa5e1f3087db9c6"
+  "gitHead": "df4aa4e46b14442e518b63284aa5e1f3087db9c6",
+  "dependencies": {
+    "cli-spinner": "^0.2.10",
+    "ora": "^5.4.1"
+  }
 }
